<?xml version="1.0"?>
<package format="2">

  <name>message_introspection</name>
  <version>1.0.0</version>
  <description>An introspection library for processing ROS messages of unknown type without compile-time requirements.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>topic_tools</depend>
  <depend>rosbag</depend>
  <doc_depend>doxygen</doc_depend>

</package>